Fixed label alignment in need view

--- a/app/assets/stylesheets/_globals.scss
+++ b/app/assets/stylesheets/_globals.scss
@@ -50,6 +50,10 @@ select::-ms-expand {
   background-position: 95% center;
 }
 
+.dropdown-label {
+  margin-left: 5px;
+}
+
 .dropdown {
   width: 135px;
 }
